--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
